@@ -13,7 +13,6 @@ This is a list of some things to do:
 
 23) TiLP used as a normal user
 
-24) select/deselect and 'copy' copies all files
 
 //------
 
